--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#products">Products</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="Login.html">Login</a></li>
                     <div class="search-container">
                         <input type="text" id="search-bar" placeholder="Search perfumes..." onkeyup="searchProducts()">
                         <button onclick="searchProducts()">🔍</button>
